hphp/hack/test/typecheck/new_inference/eager_solve/regression_remove_remove_equiv_tyvars.php.like_types.exp
File "regression_remove_remove_equiv_tyvars.php", line 23, characters 5-222:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
